# application-intent-model

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  PROMPT.md  README.md  aim.config.json  gemini-extension.json  nginx.conf  specification.md
.claude-plugin/: marketplace.json  plugin.json
agents/: aim-architect.md  aim-author.md  aim-developer.md  aim-encoder.md  aim-implementer.md  aim-registry.md  aim-repairer.md  aim-reviewer.md  aim-verifier.md
aim/: pyenv-cli.intent  weather.intent
aim/pyenv/cli/: pyenv.cli.intent
brain/: brain.architect.md  brain.developer.md  brain.encoder.md  brain.md  brain.reviewer.md
cli/: CLI.md  PUBLISHING.md  README.md
cli/aim_cli/: cli.py  prompt_builder.py
codex/prompts/: amy.md
examples/: nemicko.demo.todo.aim
examples/helpdesk/: AGENTS.md  README.md
examples/helpdesk/aim/comms/: comms.aim
pyenv-cli/: .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  START_TUI.sh  TUI_GUIDE.md  pyproject.toml  requirements.txt  setup.py
pyenv-cli/pyenv_cli/: __init__.py  __main__.py  cli.py  contracts.py  flows.py  installers.py  models.py  persistence.py  tui.py
registry/: README.md  index.json
scripts/: build_index.py  validate_registry.py
site/: brain.architect.md  brain.author.md  brain.developer.md  brain.md  brain.reviewer.md  brain.verifier.md  index.html  robots.txt  sitemap.xml
site/assets/: chrome.js  site.css
site/registry/: index.html  package.html  publish.html
site/spec/: index.html
site/spec/3.0/: index.html
skills/amy/: SKILL.md
skills/intent-consistency/: SKILL.md
(+9 files in other folders)
