[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyenv-cli"
version = "1.0.0"
description = "A CLI tool for Python virtual environment generation with AI-assisted development"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AIM Synthesizer", email = "aim@intentmodel.dev"}
]
keywords = ["python", "virtualenv", "cli", "ai", "development"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "textual>=0.47.0",
]

[project.scripts]
pyenv-cli = "pyenv_cli.cli:cli"
pyenv-tui = "pyenv_cli.tui:run_tui"

[project.urls]
Homepage = "https://intentmodel.dev"
Documentation = "https://github.com/intentmodel/pyenv-cli"
Repository = "https://github.com/intentmodel/pyenv-cli"

[tool.setuptools]
packages = ["pyenv_cli"]

[tool.setuptools.package-data]
pyenv_cli = ["*.json"]
